src/objects/FileExplorerFolderTemplate__c.object
<CustomObject>
    <description>Define a template for a File Explorer Folder structure to aid in storing a hierarchical structure of content documents.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>When, what and why you would use this template</description>
        <inlineHelpText>When, what and why you would use this template</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active folders are available for selection by users</description>
        <inlineHelpText>Active folders are available for selection by users</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Used to identify a template</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to identify a template</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>File Explorer Folder Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FEFT-{0000000}</displayFormat>
        <label>File Explorer Folder Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Explorer Folder Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>